# Sigmod2019

./: CMakeLists.txt  README.md  a.out  build.gradle  input  main  main.cpp  output  structures.h
DataStructures/: Structures.h  structures.h
SampleProgram/: sort.cc
Sorting/: get_time.c  nomp_mergesort.c  omp_mergesort.c  quick  quicksort.c  serial_mergesort.c
Utils/: Files.c  Timer.c  files.c  timer.c
nmerge/: CMakeLists.txt  main.c
sigmod2/: CMakeLists.txt  main.c
simple/: CMakeLists.txt  main.c
src/: Files.c  Structures.h  Timer.c  compile.sh  main  main.cpp  nomp_mergesort.c  old_compile.sh  old_sub_zip.sh  ompExample.c  omp_mergesort.c  pQuickSort.c  pbitonic.c  psort.c  sort.cpp  sub_zip.sh  test  test.sh  utils.c  utils.h
src/main/java/: Sort.java
theo/: CMakeLists.txt  main.c  myFunctions.h  notes.txt  t  test.c
theo/backup/: main.c
theo/backup2/: main2.c  myFunctions.h
